--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ACAMP² • Pagamentos</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="app">
@@ -238,8 +238,8 @@
 
   </div>
 
-  <script src="assets/faturas.db.js"></script>
-<script src="assets/app.js"></script>
+  <script src="faturas.db.js"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
