--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </select>
 
         <label class="label" for="loginToken">Token</label>
-        <input id="loginToken" class="input" type="password" inputmode="numeric" placeholder="Ex: 482913" />
+        <input id="loginToken" class="input" type="password" inputmode="text" placeholder="Ex: AC2913" />
 
         <button id="btnLogin" class="btn btn--primary">Acessar painel</button>
 
@@ -39,7 +39,7 @@
         </div>
 
         <div class="footnote">
-          <span class="dot"></span> Foco total em celular • ACAMP²
+          <span class="dot"></span> SISTEMA DE PAGAMENTO • ACAMP²
         </div>
       </section>
     </main>
